# scakit

./: .gitignore  Cargo.toml  Readme.md
.github/workflow/: rust.yml
src/: main.rs
src/cli/: prompts.rs
src/error/: mod.rs  template_error.rs
src/generator/: mod.rs  project_generator.rs
src/templates/: mod.rs  project_template.rs
src/utils/: fs_utils.rs
templates/ts/: eslint.config.mjs  package.json  tsconfig.json
templates/ts/src/: index.ts
